--- a/package.json
+++ b/package.json
@@ -1,24 +1,25 @@
 {
-  "name": "simple-exercise-api",
-  "version": "1.0.0",
-  "description": "",
-  "main": "app.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/HUJDUR/simple-exercise-api.git"
-  },
-  "author": "Nadir Hujdur",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/HUJDUR/simple-exercise-api/issues"
-  },
-  "homepage": "https://github.com/HUJDUR/simple-exercise-api#readme",
-  "dependencies": {
-    "dotenv": "^10.0.0",
-    "express": "^4.17.1",
-    "mongoose": "^5.12.12"
-  }
+	"name": "simple-exercise-api",
+	"version": "1.0.0",
+	"description": "",
+	"main": "app.js",
+	"scripts": {
+		"start": "nodemon server.js"
+	},
+	"repository": {
+		"type": "git",
+		"url": "git+https://github.com/HUJDUR/simple-exercise-api.git"
+	},
+	"author": "Nadir Hujdur",
+	"license": "ISC",
+	"bugs": {
+		"url": "https://github.com/HUJDUR/simple-exercise-api/issues"
+	},
+	"homepage": "https://github.com/HUJDUR/simple-exercise-api#readme",
+	"dependencies": {
+		"dotenv": "^10.0.0",
+		"express": "^4.17.1",
+		"mongoose": "^5.12.12",
+		"nodemon": "^2.0.7"
+	}
 }
