--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
 		"dotenv": "^10.0.0",
 		"express": "^4.17.1",
 		"mongoose": "^5.12.12",
-		"nodemon": "^2.0.7"
+		"nodemon": "^2.0.7",
+		"slugify": "^1.5.3"
 	}
 }
