--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
 		"mongoose": "^5.12.12",
 		"nodemon": "^2.0.7",
 		"slugify": "^1.5.3",
+		"validator": "^13.6.0",
 		"xss-clean": "^0.1.1"
 	}
 }
