--- a/package.json
+++ b/package.json
@@ -17,11 +17,13 @@
 	},
 	"homepage": "https://github.com/HUJDUR/simple-exercise-api#readme",
 	"dependencies": {
+		"bcrypt": "^5.0.1",
 		"dotenv": "^10.0.0",
 		"express": "^4.17.1",
 		"express-mongo-sanitize": "^2.1.0",
 		"express-rate-limit": "^5.2.6",
 		"helmet": "^4.6.0",
+		"jsonwebtoken": "^8.5.1",
 		"mongoose": "^5.12.12",
 		"nodemon": "^2.0.7",
 		"slugify": "^1.5.3",
