--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
 	"homepage": "https://github.com/HUJDUR/simple-exercise-api#readme",
 	"dependencies": {
 		"bcrypt": "^5.0.1",
+		"crypto": "^1.0.1",
 		"dotenv": "^10.0.0",
 		"express": "^4.17.1",
 		"express-mongo-sanitize": "^2.1.0",
